# e-commerce-fraud-detection

./: .gitignore  README.md  parameters.yaml  pyproject.toml
.dvc/: config
models/: .gitignore  calibrated_lgbm_model.pkl.dvc  calibrated_xgb_model.json.dvc  calibrated_xgb_model.pkl.dvc  lgbm_model.txt.dvc  xgb_model.json.dvc
notebooks/: 01-exploratory-data-analysis.ipynb  02-fraud-model-development.ipynb
src/: auxiliary.py  model.py  plot.py
