[project]
name = "e-commerce-fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.0",
    "jupyter>=1.1.1",
    "kaleido==0.2.1",
    "lxml>=5.3.1",
    "mlflow>=2.20.3",
    "numba==0.59.0",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scikit-learn>=1.6.1",
    "shap>=0.46.0",
    "xgboost>=2.1.4",
]
